# hotel-booking-api

./: .env.example  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
migrations/: 20251110184428_init.down.sql  20251110184428_init.up.sql
src/: enums.rs  main.rs  middleware.rs  resources.rs  settings.rs  utils.rs
src/models/: health.rs  hotels.rs  mod.rs  users.rs
src/repositories/: health.rs  hotels.rs  mod.rs  users.rs
src/routes/: health.rs  hotels.rs  mod.rs  users.rs
src/services/: health.rs  hotels.rs  mod.rs  users.rs
tests/: tests_health.rs  tests_hotels.rs  tests_users.rs
