[package]
name = "hotel-booking-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-extra = { version = "0.9", features = ["typed-header"] }
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3"
redis = { version = "0.32.7", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version="1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.4", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
